--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "dev:clean": "npm run clean && cross-env NODE_OPTIONS='--max-old-space-size=3072' next dev",
     "genkit:dev": "cross-env NODE_OPTIONS='--max-old-space-size=2048' genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "cross-env NODE_OPTIONS='--max-old-space-size=2048' genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "next build",
-    "build:dev": "cross-env NODE_OPTIONS='--max-old-space-size=6144' NODE_ENV=development next build",
-    "build:firebase": "cross-env FIREBASE_DEPLOY=true NODE_ENV=production next build",
+    "build": "cross-env NODE_OPTIONS='--max-old-space-size=3072' ESLINT_NO_DEV_ERRORS=true next build",
+    "build:dev": "cross-env NODE_OPTIONS='--max-old-space-size=3072' NODE_ENV=development next build",
+    "build:firebase": "cross-env FIREBASE_DEPLOY=true NODE_ENV=production NODE_OPTIONS='--max-old-space-size=3072' next build",
     "build:analyze": "cross-env ANALYZE=true NODE_OPTIONS='--max-old-space-size=3072' ESLINT_NO_DEV_ERRORS=true next build",
     "build:fast": "cross-env NODE_OPTIONS='--max-old-space-size=3072' ESLINT_NO_DEV_ERRORS=true next build",
     "build:emergency": "cross-env ESLINT_NO_DEV_ERRORS=true DISABLE_ESLINT=true node scripts/build-skip-typecheck.js",
@@ -39,6 +39,10 @@
     "pilot:auto-lint:watch": "node pilotScripts/automation/auto-markdown-lint-v1.js --watch",
     "pilot:generate-solution": "node pilotScripts/automation/auto-script-generator-v1.js",
     "pilot:organize-files": "node pilotScripts/utilities/util-file-organizer-v1.js",
+    "debug:systematic": "bash pilotScripts/debugging/systematic-debugging-checklist.sh",
+    "debug:auto": "bash pilotScripts/debugging/systematic-debugging-checklist.sh -AutoValidate",
+    "debug:validate": "bash pilotScripts/debugging/systematic-debugging-checklist.sh -DryRun",
+    "debug:enforce": "node -e \"const { systematicDebugger } = require('./src/lib/debugging/systematic-debugger.ts'); systematicDebugger.enforceSystematicApproach();\"",
     "rotate-credentials": "ts-node scripts/rotate-credentials.ts",
     "migrate-tiers": "ts-node -P scripts/tsconfig.json scripts/migrate-tier-consistency.ts",
     "update-tier-system": "ts-node -P scripts/tsconfig.json scripts/update-tier-system.ts",
@@ -88,7 +92,8 @@
     "test:performance-full": "cross-env NODE_OPTIONS='--max-old-space-size=4096' playwright test --config=playwright.config.performance.ts",
     "test:features": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests testing/specs/main/features/",
     "test:ai-heavy": "cross-env NODE_OPTIONS='--max-old-space-size=3072' playwright test --config=playwright.config.ai-heavy.ts --workers=1",
-    "test:production": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.production-validation.ts",
+    "test:production": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.production.ts",
+    "test:production-validation": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.production-validation.ts",
     "test:security": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.production-validation.ts --project=security-tests",
     "test:load": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.production-validation.ts --project=load-tests",
     "test:mobile-compatibility": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.production-validation.ts --project=mobile-compatibility",
