--- a/functions/package.json
+++ b/functions/package.json
@@ -31,7 +31,7 @@
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.3.2",
     "genkit": "^1.13.0",
-    "glob": "^10.4.5",
+    "glob": "^11.0.3",
     "openai": "^5.8.3",
     "stripe": "^18.3.0",
     "tailwindcss": "^4.1.11",
@@ -54,6 +54,11 @@
     "mocha": "^10.6.0",
     "sinon": "^18.0.0",
     "typescript": "^5.5.4"
+  },
+  "overrides": {
+    "inflight": "npm:@zkochan/inflight@^1.0.3",
+    "glob": "^11.0.3",
+    "rimraf": "^6.0.1"
   },
   "private": true
 }
