🚀 COMPREHENSIVE SAVE: AI Agents Implementation + Performance Optimization + Copilot History
✅ Complete AI Agent Framework Implementation:
- Customer Support, Business Operations, Technical Operations orchestrators
- TypeScript Guardian with automated error resolution
- Agent Implementation with full production deployment
- Enhanced API routes with streaming support
- Comprehensive chatbot system with admin/customer separation

🎯 Performance Optimization (workshop/performance):
- Enhanced NeuroSEO™ components with production optimization
- Build system improvements with emergency build scripts
- Production deployment verification and health checks
- Database connection pooling and scaling optimizations
- Security Operations Center enhancements

📚 Documentation & History Preservation:
- Complete agent implementation documentation
- Phase 2-4 execution reports with detailed metrics
- Enhanced development prompts and chat history
- TypeScript Guardian training and backup systems
- Comprehensive implementation guides

🛠️ Technical Infrastructure:
- Firebase production configuration
- Sentry client configuration for monitoring
- Stripe webhook integration for payments
- API route guardian for stability
- Emergency build and deployment scripts

💾 Backup Systems:
- TypeScript Guardian automated backups (multiple timestamps)
- Development chat history preservation
- Configuration backups with rollback capability
- Complete project state preservation

This commit represents a complete milestone in RankPilot development with full AI agent integration, performance optimization, and comprehensive backup systems.

--- a/package.json
+++ b/package.json
@@ -161,7 +161,9 @@
     "mcp:validate:windows": "powershell -ExecutionPolicy Bypass -File scripts/validate-mcp-tokens.ps1",
     "mcp:test": "npm run mcp:validate && echo 'MCP validation complete - tokens ready for use'",
     "mcp:setup": "echo 'MCP Configuration Status:' && cat state.json",
-    "mcp:status": "echo 'Checking MCP server status...' && npm run mcp:validate"
+    "mcp:status": "echo 'Checking MCP server status...' && npm run mcp:validate",
+    "build:memory-safe": "cross-env NODE_OPTIONS=\"--max-old-space-size=2048\" next build",
+    "build:high-memory": "cross-env NODE_OPTIONS=\"--max-old-space-size=6144\" next build"
   },
   "dependencies": {
     "@genkit-ai/firebase": "^1.14.0",
