feat: Deploy systematic solutions to performance testing channel
🚀 PERFORMANCE TESTING DEPLOYMENT READY

✅ Core Systematic Solutions:
- Data Architecture: FirestoreConnectionManager, QueryBuilder
- React Patterns: useSafeAsyncData, Error Boundaries
- PWA Enhancement: Service Worker improvements
- Feature Gating: Universal access control system
- UI/UX: StandardizedButton, consistent design

🔧 Key Fixes:
- Fixed infinite loops in team/page.tsx with useCallback
- Enhanced Firestore rules for proper collection access
- Improved NeuroSEODashboard error handling
- Enhanced PWA service worker caching strategies

🚀 Deployment Configuration:
- Optimized workflow for performance-testing channel
- Target: https://rankpilot-h3jpc--performance-testing-mw0cwov5.web.app
- Full production build with all environment variables
- 7-day testing period with comprehensive validation

🛡️ Security:
- Sensitive files added to .gitignore
- Clean deployment without API keys in commits

Ready for LEGENDARY performance validation! 🏆

--- a/.gitignore
+++ b/.gitignore
@@ -208,5 +208,20 @@ bundle-report.html
 *.mkv
 
 # End of optimized .gitignore
+
+# Sensitive Configuration Files
+# -----------------------------
 masterKeys.md
 docs/ENVIRONMENT_VARIABLES.md
+state.json
+MCP_CONFIGURATION_PLAN.md
+MCP_CONFIGURATION_SUMMARY.md
+mcp.json
+
+# API Integration Documentation (contains example keys)
+# ----------------------------------------------------
+docs/integrations/api-keys/integration-summary.md
+docs/integrations/mcp-full/configuration-plan.md
+docs/integrations/mcp-full/configuration-summary.md
+docs/integrations/mcp/success-complete.md
+docs/integrations/stripe/integration-complete.md
