feat: Clean production readiness updates without secrets
- Added PilotBuddy chat modes for enhanced AI assistance
- Implemented comprehensive SEO form components
- Enhanced type definitions and chart components
- Improved mobile performance optimizations
- Fixed access control with better feature management
- Enhanced quota management system
- Updated security with comprehensive .gitignore
- Reorganized GitHub configuration files
- Added production deployment documentation
- Removed sensitive files and configuration directories

--- a/.github/workflows/deploy-performance-testing.yml
+++ b/.github/workflows/deploy-performance-testing.yml
@@ -8,6 +8,7 @@ on:
   push:
     branches:
       - workshop/performance
+      - workshop/performance-clean
   workflow_dispatch:
     inputs:
       deploy_functions:
