--- a/package.json
+++ b/package.json
@@ -200,6 +200,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@sentry/nextjs": "^9.43.0",
     "@stripe/stripe-js": "^7.5.0",
     "@types/canvas-confetti": "^1.9.0",
     "@types/d3": "^7.4.3",
@@ -233,7 +234,7 @@
     "react-icons": "^5.5.0",
     "react-is": "^19.1.0",
     "react-pdf": "^10.0.1",
-    "recharts": "^3.0.2",
+    "recharts": "^3.1.0",
     "sonner": "^2.0.6",
     "stripe": "^18.3.0",
     "tailwind-merge": "^3.0.1",
