--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,6 +46,9 @@
     "playwright.config.new.mjs"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "backups/**/*",
+    ".typescript-guardian-backups/**/*",
+    "docs-backup-*/**/*"
   ]
 }
