--- a/package.json
+++ b/package.json
@@ -109,6 +109,9 @@
     "@ai-sdk/google": "0.0.55",
     "@ai-sdk/openai": "0.0.67",
     "@anthropic-ai/sdk": "^0.30.1",
+    "@axe-core/playwright": "^4.10.2",
+    "@google-cloud/error-reporting": "^3.0.5",
+    "@google-cloud/tasks": "^6.2.0",
     "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.10.0",
     "@langchain/community": "^0.3.22",
@@ -117,6 +120,9 @@
     "@langchain/openai": "^0.3.15",
     "@neondatabase/serverless": "^0.10.1",
     "@next/bundle-analyzer": "^15.1.5",
+    "@opentelemetry/auto-instrumentations-node": "^0.62.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.203.0",
+    "@paypal/react-paypal-js": "^8.8.3",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -127,6 +133,7 @@
     "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
@@ -134,7 +141,6 @@
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-sheet": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
@@ -152,10 +158,12 @@
     "@vercel/speed-insights": "^1.1.0",
     "ai": "^4.0.37",
     "autoprefixer": "^10.4.20",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.3",
     "cross-env": "^7.0.3",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.5",
@@ -165,18 +173,24 @@
     "framer-motion": "^11.15.0",
     "google-auth-library": "^9.15.0",
     "input-otp": "^1.4.1",
+    "jspdf": "^3.0.1",
     "langchain": "^0.3.5",
     "lucide-react": "^0.468.0",
     "next": "15.1.5",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "nodemailer": "^7.0.5",
     "openai": "^4.75.1",
     "playwright": "^1.49.1",
     "postcss": "^8.5.2",
     "react": "^19.0.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
     "react-hotkeys-hook": "^4.6.1",
-    "recharts": "^2.15.0",
+    "react-icons": "^5.5.0",
+    "recharts": "^2.15.4",
     "sonner": "^1.7.1",
     "stripe": "^17.3.1",
     "tailwind-merge": "^2.5.4",
@@ -184,14 +198,22 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.7.2",
     "vaul": "^1.1.1",
+    "web-vitals": "^5.0.3",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@genkit-ai/googleai": "^1.15.5",
     "@playwright/test": "^1.49.1",
+    "@types/canvas-confetti": "^1.9.0",
+    "@types/d3": "^7.4.3",
     "@types/jest": "^29.5.14",
-    "@types/markdownlint": "^0.2.0",
+    "@types/nodemailer": "^6.4.17",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "cheerio": "^1.1.2",
     "dotenv": "^16.4.7",
+    "genkit": "^1.15.5",
     "markdownlint": "^0.36.1",
     "markdownlint-cli": "^0.43.0",
     "nodemon": "^3.1.9",
